--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="page-head">
                 <div id="photo"><img src="./index_files/yufan.jfif" align="right"></div>
                 <h1>Yufan Zhou</h1>
-                <p>Research Scientist at Adobe Research </p>
+                <p>Incoming Research Scientist at Adobe Research </p>
                 <p>
                     <a href="https://www.linkedin.com/in/yufan-zhou-a1b21a156/"  target="_blank">[Linkedin]</a>,
                     <a href="https://scholar.google.com/citations?user=0eVrHJAAAAAJ"  target="_blank">[Google Scholar]</a>,
@@ -34,7 +34,7 @@
                 </p>
                 <ul>
                     <li>Large-scale text-to-image generation models;</li>
-                    <li>Customize pre-trained generative models;</li>
+                    <li>Customizing pre-trained generative models;</li>
                     <li>Saving the training or dataset construction cost in generative modeling;</li>
                 </ul>
 
