--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div id="page-head">
                 <div id="photo"><img src="./index_files/yufan.jfif" align="right"></div>
                 <h1>Yufan Zhou</h1>
-                <p>Incoming Research Scientist at Adobe Research </p>
+                <p>Research Scientist at Adobe Research </p>
                 <p>
                     <a href="https://www.linkedin.com/in/yufan-zhou-a1b21a156/"  target="_blank">[Linkedin]</a>,
                     <a href="https://scholar.google.com/citations?user=0eVrHJAAAAAJ"  target="_blank">[Google Scholar]</a>,
@@ -56,7 +56,7 @@
                 <ul>
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2305.13579">Enhancing Detail Preservation for Customized Text-to-Image Generation: A Regularization-Free Approach</a></text> (<a href="https://github.com/drboog/ProFusion">code</a>)</div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2305.13579">Enhancing Detail Preservation for Customized Text-to-Image Generation: A Regularization-Free Approach</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=drboog&repo=ProFusion&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Tong Sun, Jinhui Xu. </div>
                             <div class="abs"><font color="#00539CFF">A novel framework for customized text-to-image generation without the use of regularization. <br> We can efficiently customize a large-scale text-to-image generation model on single GPU, with only one image provided by the user.</font></i></div>
 
@@ -67,7 +67,7 @@
                     <li>
                         <div class="paper">
                             <div class="abs_photo"><img src="./index_files/hu.jpg" width="100" height="100" align="right"></div>
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text> (<a href="https://github.com/drboog/Shifted_Diffusion">code</a>)</div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2211.15388">Shifted Diffusion for Text-to-image Generation</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=drboog&repo=Shifted_Diffusion&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Bingchen Liu, Yizhe Zhu, Xiao Yang, Changyou Chen, Jinhui Xu. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2023.</div>
                             <div class="abs"> <font color="#00539CFF">We propose a method termed Corgi, which can better generate image embeddings from text inside multimodal embedding space. <br> It benefits both standard and language-free text-to-image generation. And yes, I do have a Corgi.</font> </i></div>
@@ -77,7 +77,7 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text>  (<a href="https://github.com/drboog/Lafite">code</a>) </div>
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2111.13792">LAFITE: Towards Language-Free Training for Text-to-Image Generation</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=drboog&repo=Lafite&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe> </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Changyou Chen, Chunyuan Li, Chris Tensmeyer, Tong Yu, Jiuxiang Gu, Jinhui Xu, Tong Sun. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2022.</div>
                             <div class="abs"><font color="#00539CFF">Our proposed work, Lafite, is the first work which can successfully train text-to-image generation model with image-only dataset.</font></i></div>
@@ -127,7 +127,7 @@
                     <li>
                         Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022; ACL 2023;
                     <li>
-                        Journal Reviewer: IEEE TNNLS;
+                        Journal Reviewer: IEEE Transactions on Neural Networks and learning systems;  IEEE Transactions on Circuits and Systems for Video Technology;
                     </li>
 
                 </ul>
