--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <p>
                     I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), <a href="https://scholar.google.com/citations?user=uKdv6SUAAAAJ&hl=en"  target="_blank">Bingchen Liu</a> (ByteDance).
                 </p>
+                <p>
+                    If you have interest in interning at Adobe, feel free to send me an email containing your CV and a short overview of the topics that interest you.
+                </p>
 
             <hr>
 
@@ -125,7 +128,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022; ACL 2023;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ACL 2023;
                     <li>
                         Journal Reviewer: IEEE Transactions on Neural Networks and learning systems;  IEEE Transactions on Circuits and Systems for Video Technology;
                     </li>
