--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), <a href="https://scholar.google.com/citations?user=uKdv6SUAAAAJ&hl=en"  target="_blank">Bingchen Liu</a> (ByteDance).
                 </p>
                 <p>
-                    If you have interest in interning at Adobe, feel free to send me an email containing your CV and a short overview of the topics that interest you.
+                    If you have interest in interning at Adobe, feel free to send me an email with your CV and a short overview of the topics that interest you.
                 </p>
 
             <hr>
