--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <div class="section-heading"><h2>Bio</h2></div>
 
                 <p>
-                Currently my research focuses on generative models especially multi-modal generative models. I'm working on some methods so that everyone can benefit from large-scale generative models, and contribute to this fascinating research topic even with limited computation resources. More specifically, I'm interested in:
+                Currently my research focuses on generative models. More specifically, I'm interested in:
                 </p>
                 <ul>
-                    <li>Large-scale text-to-image generation models;</li>
+                    <li>Multi-modal generative models (assistants) which are more user-friendly;</li>
                     <li>Customizing pre-trained generative models;</li>
                     <li>Saving the training or dataset construction cost in generative modeling;</li>
                 </ul>
@@ -57,6 +57,15 @@
 
             <div class="section-heading"><h2>Selected Papers <a href="./papers.html">[More]</a></h2> </div>
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2312.03045">Customization Assistant for Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF"> An assistant which can generate creative images for specific user-input subject along with text explanation and elaboration in 2-5 seconds, without any fine-tuning.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2305.13579">Enhancing Detail Preservation for Customized Text-to-Image Generation: A Regularization-Free Approach</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=drboog&repo=ProFusion&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe></div>
@@ -99,14 +108,6 @@
 
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538">Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                        </div>
-                    </li>
-                    <br>
-
-                    <li>
-                        <div class="paper">
                             <div class="title"><text id="small-caps"> <a href = "https://arxiv.org/pdf/2102.03909.pdf"  target="_blank"> Meta-Learning with Neural Tangent Kernels</a></text></div>
                             <div class="authors"> <b>Yufan Zhou*</b>, Zhenyi Wang*, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
                             <div class="venue"> <i> International Conference on Learning Representations</i> (<b>ICLR</b>), 2021.</div>
@@ -128,7 +129,7 @@
             <div class="section-heading"><h2>Professional Service</h2></div>
                 <ul>
                     <li>
-                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023; ICLR 2022, 2023; CVPR 2023; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ACL 2023;
+                        Conferences Program Committee/Reviewer: NeurIPS 2020, 2021, 2022, 2023; ICML 2021, 2022, 2023, 2024; ICLR 2022, 2023, 2024; CVPR 2023, 2024; AISTATS 2021; AAAI 2021, 2022; IJCAI 2021; EMNLP 2022, 2023; ACL 2023;
                     <li>
                         Journal Reviewer: IEEE Transactions on Neural Networks and learning systems;  IEEE Transactions on Circuits and Systems for Video Technology;
                     </li>
