--- a/papers.html
+++ b/papers.html
@@ -93,6 +93,25 @@
                     </li>
                     <br>
 
+
+                     <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps">Towards Aligned Layout Generation via Diffusion Model with Aesthetic Constraints</text> </div>
+                            <div class="authors"> Jian Chen, Ruiyi Zhang, <b>Yufan Zhou</b>, Rajiv Jain, Zhiqiang Xu, Ryan Rossi, Changyou Chen. </div>
+                            <div class="venue"> <i>Workshop on Diffusion Models</i> at <b>NeurIPS</b> 2023. </div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps">Enhanced Visual Instruction Tuning for Text-Rich Image Understanding</text> </div>
+                            <div class="authors"> Yanzhe Zhang, Ruiyi Zhang, Jiuxiang Gu, <b>Yufan Zhou</b>, Nedim Lipka, Diyi Yang, Tong Sun. </div>
+                            <div class="venue"> <i>Workshop on Instruction Tuning and Instruction Following</i> at <b>NeurIPS</b> 2023. </div>
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/1912.10150.pdf"  target="_blank">Learning Diverse Stochastic Action-Generators by Learning Smooth Latent Transitions</a> <font color="#FF0000">(Spotlight)</font></text> </div>
@@ -118,6 +137,24 @@
                 <ul>
                     <li>
                         <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2312.03045">Customization Assistant for Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF"> An assistant which can generate creative images for specific user-input subject along with text explanation and elaboration in 2-5 seconds, without any fine-tuning.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://llavar.github.io/">LLaVAR: Enhanced Visual Instruction Tuning for Text-rich Image Understanding</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=SALT-NLP&repo=LLaVAR&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe>  </div>
+                            <div class="authors"> Yanzhe Zhang, Ruiyi Zhang, Jiuxiang Gu, <b>Yufan Zhou</b>, Nedim Lipka, Diyi Yang, Tong Sun. </div>
+                        </div>
+                    </li>
+                    <br>
+
+
+                    <li>
+                        <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2305.13579">Enhancing Detail Preservation for Customized Text-to-Image Generation: A Regularization-Free Approach</a></text> <iframe src="https://ghbtns.com/github-btn.html?user=drboog&repo=ProFusion&type=star&count=true&size=small" frameborder="0" scrolling="0" width="90" height="20" title="GitHub"></iframe>  </div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Tong Sun, Jinhui Xu. </div>
                             <div class="abs"><font color="#00539CFF">A novel framework for customized text-to-image generation without the use of regularization. <br> We can efficiently customize a large-scale text-to-image generation model on single GPU, with only one image provided by the user.</font></i></div>
@@ -125,6 +162,7 @@
                         </div>
                     </li>
                     <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2210.14124"> Lafite2: Few-shot Text-to-Image Generation</a></text></div>
