--- a/papers.html
+++ b/papers.html
@@ -14,6 +14,44 @@
     <body>
             <div class="section-heading"><h2>Publications</h2></div>
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2312.03045">Customization Assistant for Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Tong Sun. </div>
+                            <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2024.</div>
+                            <div class="abs"><font color="#00539CFF"> An assistant which can generate creative images for specific user-input subject along with text explanation and elaboration in 2-5 seconds, without any fine-tuning.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="">TRINS: Towards Multimodal Language Models That Can Read</a></text></div>
+                            <div class="authors"> Ruiyi Zhang, Yanzhe Zhang, Jian Chen, <b>Yufan Zhou</b>, Jiuxiang Gu, Changyou Chen, Tong Sun. </div>
+                            <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2024.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                     <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"><a href="https://arxiv.org/abs/2402.04754">Towards Aligned Layout Generation via Diffusion Model with Aesthetic Constraints</a></text> </div>
+                            <div class="authors"> Jian Chen, Ruiyi Zhang, <b>Yufan Zhou</b>, Changyou Chen. </div>
+                            <div class="venue"> <i>The Twelfth International Conference on Learning Representations</i> (<b>ICLR</b>) 2024. </div>
+                        </div>
+                    </li>
+                    <br>
+
+                    
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps">Enhanced Visual Instruction Tuning for Text-Rich Image Understanding</text> </div>
+                            <div class="authors"> Yanzhe Zhang, Ruiyi Zhang, Jiuxiang Gu, <b>Yufan Zhou</b>, Nedim Lipka, Diyi Yang, Tong Sun. </div>
+                            <div class="venue"> <i>Workshop on Instruction Tuning and Instruction Following</i> at <b>NeurIPS</b> 2023. </div>
+                        </div>
+                    </li>
+                    <br>
+
 
                     <li>
                         <div class="paper">
@@ -84,6 +122,7 @@
                     </li>
                     <br>
 
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://ojs.aaai.org//index.php/AAAI/article/view/6135"  target="_blank">Variational Adversarial Kernel Learned Imitation Learning</a> <font color="#FF0000">(Spotlight)</font></text></div>
@@ -102,23 +141,6 @@
                     </li>
                     <br>
 
-                     <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps">Towards Aligned Layout Generation via Diffusion Model with Aesthetic Constraints</text> </div>
-                            <div class="authors"> Jian Chen, Ruiyi Zhang, <b>Yufan Zhou</b>, Rajiv Jain, Zhiqiang Xu, Ryan Rossi, Changyou Chen. </div>
-                            <div class="venue"> <i>Workshop on Diffusion Models</i> at <b>NeurIPS</b> 2023. </div>
-                        </div>
-                    </li>
-                    <br>
-
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps">Enhanced Visual Instruction Tuning for Text-Rich Image Understanding</text> </div>
-                            <div class="authors"> Yanzhe Zhang, Ruiyi Zhang, Jiuxiang Gu, <b>Yufan Zhou</b>, Nedim Lipka, Diyi Yang, Tong Sun. </div>
-                            <div class="venue"> <i>Workshop on Instruction Tuning and Instruction Following</i> at <b>NeurIPS</b> 2023. </div>
-                        </div>
-                    </li>
-                    <br>
 
                     <li>
                         <div class="paper">
@@ -136,9 +158,8 @@
                 <ul>
                     <li>
                         <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2312.03045">Customization Assistant for Text-to-Image Generation</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Jiuxiang Gu, Tong Sun. </div>
-                            <div class="abs"><font color="#00539CFF"> An assistant which can generate creative images for specific user-input subject along with text explanation and elaboration in 2-5 seconds, without any fine-tuning.</font></i></div>
+                            <div class="title"><text id="small-caps"> <a href="https://www.arxiv.org/abs/2402.11122">Navigating the Dual Facets: A Comprehensive Evaluation of Sequential Memory Editing in Large Language Models</a></text></div>
+                            <div class="authors">  Zihao Lin, Mohammad Beigi, Hongxuan Li, <b>Yufan Zhou</b>, Yuxiang Zhang, Qifan Wang, Wenpeng Yin, Lifu Huang. </div>
                         </div>
                     </li>
                     <br>
@@ -162,44 +183,44 @@
                     </li>
                     <br>
 
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2210.14124"> Lafite2: Few-shot Text-to-Image Generation</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>
-                        </div>
-                    </li>
-                    <br>
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2112.03502">A Generic Approach for Enhancing GANs by Regularized Latent Optimization</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>
-                        </div>
-                    </li>
-                    <br>
+<!--                    <li>-->
+<!--                        <div class="paper">-->
+<!--                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2210.14124"> Lafite2: Few-shot Text-to-Image Generation</a></text></div>-->
+<!--                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
+<!--                    <li>-->
+<!--                        <div class="paper">-->
+<!--                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2112.03502">A Generic Approach for Enhancing GANs by Regularized Latent Optimization</a></text></div>-->
+<!--                            <div class="authors"> <b>Yufan Zhou</b>, Chunyuan Li, Changyou Chen, Jinhui Xu. </div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
 
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538">Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                        </div>
-                    </li>
-                    <br>
+<!--                    <li>-->
+<!--                        <div class="paper">-->
+<!--                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2105.04538">Learning High-Dimensional Distributions with Latent Neural Fokker-Planck Kernels</a></text></div>-->
+<!--                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
 
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/1912.00979">KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>
-                        </div>
-                    </li>
-                    <br>
+<!--                    <li>-->
+<!--                        <div class="paper">-->
+<!--                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/1912.00979">KernelNet: A Data-Dependent Kernel Parameterization for Deep Generative Modeling</a></text></div>-->
+<!--                            <div class="authors"> <b>Yufan Zhou</b>, Changyou Chen, Jinhui Xu.</div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                    <br>-->
 
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2005.07869">Graph Neural Networks with Composite Kernels</a></text></div>
-                            <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>
-                        </div>
-                    </li>
-                </ul>
+<!--                    <li>-->
+<!--                        <div class="paper">-->
+<!--                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2005.07869">Graph Neural Networks with Composite Kernels</a></text></div>-->
+<!--                            <div class="authors"> <b>Yufan Zhou</b>, Jiayi Xian, Changyou Chen, Jinhui Xu.</div>-->
+<!--                        </div>-->
+<!--                    </li>-->
+<!--                </ul>-->
 
     </body>
 </html>
