--- a/papers.html
+++ b/papers.html
@@ -26,6 +26,15 @@
 
                     <li>
                         <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://www.arxiv.org/abs/2402.11122">Navigating the Dual Facets: A Comprehensive Evaluation of Sequential Memory Editing in Large Language Models</a></text></div>
+                            <div class="authors">  Zihao Lin, Mohammad Beigi, Hongxuan Li, <b>Yufan Zhou</b>, Yuxiang Zhang, Qifan Wang, Wenpeng Yin, Lifu Huang. </div>
+                            <div class="venue"> <i> Annual Meeting of the Association for Computational Linguistics </i> (<b>ACL</b>), 2024.</div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="">TRINS: Towards Multimodal Language Models That Can Read</a></text></div>
                             <div class="authors"> Ruiyi Zhang, Yanzhe Zhang, Jian Chen, <b>Yufan Zhou</b>, Jiuxiang Gu, Changyou Chen, Tong Sun. </div>
                             <div class="venue"> <i> IEEE Conference on Computer Vision and Pattern Recognition </i> (<b>CVPR</b>), 2024.</div>
@@ -156,13 +165,7 @@
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ul>
-                    <li>
-                        <div class="paper">
-                            <div class="title"><text id="small-caps"> <a href="https://www.arxiv.org/abs/2402.11122">Navigating the Dual Facets: A Comprehensive Evaluation of Sequential Memory Editing in Large Language Models</a></text></div>
-                            <div class="authors">  Zihao Lin, Mohammad Beigi, Hongxuan Li, <b>Yufan Zhou</b>, Yuxiang Zhang, Qifan Wang, Wenpeng Yin, Lifu Huang. </div>
-                        </div>
-                    </li>
-                    <br>
+
 
                     <li>
                         <div class="paper">
