--- a/web.html
+++ b/web.html
@@ -54,6 +54,13 @@
                 </p>
 
             <hr>
+            <div class="section-heading"><h2>News</h2></div>
+                <ul>
+                    <li>One paper accepted by ACL 2024.</li>
+                    <li>Two papers accepted by CVPR 2024.</li>
+                    <li>One paper accepted by ICLR 2024.</li>
+                </ul>
+            <hr>
 
             <div class="section-heading"><h2>Selected Papers <a href="./papers.html">[More]</a></h2> </div>
                 <ul>
