--- a/papers.html
+++ b/papers.html
@@ -167,6 +167,14 @@
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
                 <ul>
 
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2406.09305">Toffee: Efficient Million-Scale Dataset Construction for Subject-Driven Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Kaizhi Zheng, Nanxuan Zhao, Jiuxiang Gu, Zichao Wang, Xin Eric Wang, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF"> Efficient method to construct dataset for subject-driven T2I generation, which can save at least tens of thousands of GPU hours.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
 
                     <li>
                         <div class="paper">
