--- a/web.html
+++ b/web.html
@@ -50,7 +50,7 @@
                     I worked as a Research Intern with <a href = "http://chunyuan.li/"  target="_blank">Chunyuan Li</a> (Microsoft), <a href = "https://zhangry868.github.io/"  target="_blank">Ruiyi Zhang</a> (Adobe), <a href="https://scholar.google.com/citations?user=uKdv6SUAAAAJ&hl=en"  target="_blank">Bingchen Liu</a> (ByteDance).
                 </p>
                 <p>
-                    If you have interest in interning at Adobe, feel free to send me an email with your CV and a short overview of the topics that interest you.
+                    Self-motivated students who are interested in interning at Adobe, or seeking research collaborations, feel free to reach out to me.
                 </p>
 
             <hr>
@@ -64,6 +64,15 @@
 
             <div class="section-heading"><h2>Selected Papers <a href="./papers.html">[More]</a></h2> </div>
                 <ul>
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2406.09305">Toffee: Efficient Million-Scale Dataset Construction for Subject-Driven Text-to-Image Generation</a></text></div>
+                            <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Kaizhi Zheng, Nanxuan Zhao, Jiuxiang Gu, Zichao Wang, Xin Eric Wang, Tong Sun. </div>
+                            <div class="abs"><font color="#00539CFF"> Efficient method to construct dataset for subject-driven T2I generation, which can save at least tens of thousands of GPU hours.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
+
                     <li>
                         <div class="paper">
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2312.03045">Customization Assistant for Text-to-Image Generation</a></text></div>
