--- a/papers.html
+++ b/papers.html
@@ -13,6 +13,7 @@
 
     <body>
             <div class="section-heading"><h2>Publications</h2></div>
+                &#9824 Mentored Intern/Student
                 <ul>
 
                     <li>
@@ -165,6 +166,7 @@
 
             <hr>
             <div class="section-heading"><h2>Manuscripts/Preprints</h2></div>
+                &#9824 Mentored Intern/Student
                 <ul>
 
                     <li>
@@ -172,6 +174,15 @@
                             <div class="title"><text id="small-caps"> <a href="https://arxiv.org/abs/2406.09305">Toffee: Efficient Million-Scale Dataset Construction for Subject-Driven Text-to-Image Generation</a></text></div>
                             <div class="authors"> <b>Yufan Zhou</b>, Ruiyi Zhang, Kaizhi Zheng, Nanxuan Zhao, Jiuxiang Gu, Zichao Wang, Xin Eric Wang, Tong Sun. </div>
                             <div class="abs"><font color="#00539CFF"> Efficient method to construct dataset for subject-driven T2I generation, which can save at least tens of thousands of GPU hours.</font></i></div>
+                        </div>
+                    </li>
+                    <br>
+
+                    <li>
+                        <div class="paper">
+                            <div class="title"><text id="small-caps"> <a href="https://arxiv.org/pdf/2406.12044">ARTIST: Improving Generation of Text-rich Images by Disentanglement</a></text></div>
+                            <div class="authors"> Jianyi Zhang<sup>&#9824</sup>, <b>Yufan Zhou</b>, Jiuxiang Gu, Curtis Wigington, Tong Yu, Yiran Chen, Tong Sun, Ruiyi Zhang. </div>
+                            <div class="abs"><font color="#00539CFF"> Improve text rendering ability of text-to-image diffusion model.</font></i></div>
                         </div>
                     </li>
                     <br>
